--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+* {
+  background-color: rgb(242, 225, 205);
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  
   display: flex;
-  flex-direction: column;
+  margin: 0 auto;
+}
+
+.description {
+  max-width: 50%;
   align-items: center;
+  margin: 30px auto;
+  padding: 5px 20px;
+
+}
+img {
+  max-width: 50%;
+  max-height: 40rem;
+  align-items: center;
+
+}
+.button-container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  
+  margin: 5rem auto;
+  align-items: center;
+  width: 15rem;
+  background-color: #f4511e;
+  border: none;
+  color: #000;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.button:hover {opacity: 1}
+
+@media screen and (max-width:480px) {
+  .container {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
+
+
